force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/copado__Static_Code_Analysis_Violation__c.object-meta.xml
<CustomObject>
    <description>This object will hold the details about every single violation found in Apex classes according to the specified ruleset.</description>
    <label>Static Code Analysis Violation</label>
    <nameField>
        <displayFormat>SCV-{000000}</displayFormat>
        <label>Static Code Analysis Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Static Code Analysis Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>