force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__File__c.field-meta.xml
<CustomField>
    <fullName>copado__File__c</fullName>
    <description>File analyzed by PMD.</description>
    <label>File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>