force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Info_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>copado__Info_URL_Link__c</fullName>
    <formula>HYPERLINK(copado__Info_URL__c, IMAGE(&apos;/img/msg_icons/info24.png&apos;, &apos;Info URL&apos;, 18, 18) )</formula>
    <label>Info URL</label>
    <type>Text</type>
</CustomField>