force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Line__c.field-meta.xml
<CustomField>
    <fullName>copado__Line__c</fullName>
    <description>Line of code that violated the rule.</description>
    <label>Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>