force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Priority__c.field-meta.xml
<CustomField>
    <fullName>copado__Priority__c</fullName>
    <description>Level of severity of the rule violated.</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>