force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Resolution__c.field-meta.xml
<CustomField>
    <fullName>copado__Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unresolved</fullName>
                <default>true</default>
                <label>Unresolved</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>False Positive</fullName>
            </value>
            <value>
                <fullName>Won&apos;t fix</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>