force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Rule__c.field-meta.xml
<CustomField>
    <fullName>copado__Rule__c</fullName>
    <description>Name of the rule violated.</description>
    <label>Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>