force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Score__c.field-meta.xml
<CustomField>
    <fullName>copado__Score__c</fullName>
    <formula>6 -  copado__Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>