force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Static_Code_Analysis_Result__c.field-meta.xml
<CustomField>
    <fullName>copado__Static_Code_Analysis_Result__c</fullName>
    <label>Static Code Analysis Result</label>
    <referenceTo>copado__Static_Code_Analysis_Result__c</referenceTo>
    <relationshipLabel>Static Code Analysis Violations</relationshipLabel>
    <relationshipName>Static_Code_Analysis_Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>